# codesage

./: .agent-report.json  .env.example  .gitignore  LICENSE  Makefile  README.md  pyproject.toml  requirements.txt
src/: __init__.py  main.py
src/agents/: __init__.py
src/agents/llm/: __init__.py  client.py
src/agents/prompts/: detection.txt  issue_format.txt  reviewer.txt  understanding.txt  writer.txt
src/agents/tasks/: __init__.py  detection_agent.py  reviewer_agent.py  understanding_agent.py  writer_agent.py
src/analyzer/: __init__.py
src/analyzer/chunking/: __init__.py  chunker.py
src/analyzer/indexing/: __init__.py  code_index.py  symbol_table.py
src/analyzer/loader/: __init__.py  file_loader.py  language_detector.py
src/analyzer/parsing/: __init__.py  ast_parser.py  regex_parser.py
src/cli/: __init__.py  options.py
src/cli/commands/: __init__.py  doctor.py  init.py  run.py
src/config/: __init__.py  defaults.py  loader.py  schema.py
src/core/: __init__.py  chunk.py  mapping.py
src/graph/: __init__.py  builder.py  edges.py  state.py
src/graph/nodes/: __init__.py  detection.py  llm_setup.py  parser.py  (+3 more)
src/issues/: __init__.py  schema.py  scorer.py  scoring.py
src/report/: __init__.py  formatter.py  markdown.py
src/retrieval/: __init__.py  ranking.py  selector.py
src/storage/: __init__.py  cache.py  filesystem.py
src/utils/: __init__.py  helpers.py  logger.py  spinner.py
src/validation/: __init__.py  scoring.py  semantic.py  structural.py
tests/: conftest.py  test_analyzer.py  test_cli.py  test_graph.py  test_report.py
(+8 files in other folders)
